# Personal_Projects

./: README.md
2023.5.16/: ReadMe.txt
2023.5.16/SlotsProject/: SlotsProject.sln
2023.5.16/SlotsProject/SlotsProject/: Game.cpp  Game.h  Slots.cpp  Slots.h  SlotsProject.vcxproj  SlotsProject.vcxproj.filters  main.cpp
2023.6.11/: Statement.docx
2023.6.11/Programs/Common/: Address.h  SocketException.h
2023.6.11/Programs/Program1/: CMakeLists.txt  Connection.h  ConnectionUnix.cpp  ConnectionUnix.h  ConnectionWindows.cpp  ConnectionWindows.h  SharedBuffer.h  main.cpp
2023.6.11/Programs/Program2/: CMakeLists.txt  Connection.h  ConnectionUnix.cpp  ConnectionUnix.h  ConnectionWindows.cpp  ConnectionWindows.h  main.cpp
2023.8.16/: Edgar_Khachatryans_solution.ipynb  ReadMe.txt
